force-app/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Add_Order_Lines__c.field-meta.xml
<CustomField>
    <fullName>Add_Order_Lines__c</fullName>
    <formula>HYPERLINK(&quot;/a1u/e?CF00N4N00000InQ6n=&quot;+Name+&quot;&amp;retURL=%2F&quot;+ Id+&quot;&amp;CF00N4N00000InQ6n_lkid=&quot;+Id, IMAGE(&quot;/resource/NewLineItemButton&quot;, &quot;Create Order Lines&quot;, 28, 100),&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add Order Lines</label>
    <type>Text</type>
</CustomField>