force-app/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Collect_Account_number__c.field-meta.xml
<CustomField>
    <fullName>Collect_Account_number__c</fullName>
    <label>Collect Account number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>