force-app/main/default/objects/AcctSeedERP__Sales_Order__c/fields/freight_cost__c.field-meta.xml
<CustomField>
    <fullName>freight_cost__c</fullName>
    <label>Freight Cost</label>
    <summarizedField>AcctSeedERP__Shipment__c.Freight_Cost__c</summarizedField>
    <summaryForeignKey>AcctSeedERP__Shipment__c.AcctSeedERP__Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>