force-app/main/default/objects/AcctSeedERP__Sales_Order__c/fields/InventoryCost__c.field-meta.xml
<CustomField>
    <fullName>InventoryCost__c</fullName>
    <label>InventoryCost</label>
    <summarizedField>AcctSeedERP__Sales_Order_Line__c.InvestoryCost__c</summarizedField>
    <summaryForeignKey>AcctSeedERP__Sales_Order_Line__c.AcctSeedERP__Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>