force-app/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Is_Customer_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Taxable__c</fullName>
    <formula>AcctSeedERP__Opportunity__r.Account.Is_Taxable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Customer Taxable</label>
    <type>Checkbox</type>
</CustomField>