force-app/main/default/objects/AcctSeedERP__Sales_Order__c/fields/is_processed__c.field-meta.xml
<CustomField>
    <fullName>is_processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is processed</label>
    <type>Checkbox</type>
</CustomField>