force-app/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>AcctSeedERP__Purchase_Order__c</referenceTo>
    <relationshipLabel>Sales Order</relationshipLabel>
    <relationshipName>Sales_Order</relationshipName>
    <type>Lookup</type>
</CustomField>