force-app/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Sales Order</relationshipLabel>
    <relationshipName>Sales_Order</relationshipName>
    <type>Lookup</type>
</CustomField>