force-app/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Ship_Via__c.field-meta.xml
<CustomField>
    <fullName>Ship_Via__c</fullName>
    <label>Ship Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Ground</fullName>
            </value>
            <value>
                <fullName>2nd Day Air</fullName>
            </value>
            <value>
                <fullName>Next Day Air</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Customer Pick Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>