force-app/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Name__c</fullName>
    <inlineHelpText>Enter the name of the business you want to ship to.</inlineHelpText>
    <label>Shipping Name</label>
    <type>TextArea</type>
</CustomField>