force-app/main/default/objects/AcctSeedERP__Sales_Order__c/fields/SO_Number__c.field-meta.xml
<CustomField>
    <fullName>SO_Number__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Id, 
 IF(Sales_Order_Number__c==&apos;&apos;, Name, Sales_Order_Number__c), 
&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Number</label>
    <type>Text</type>
</CustomField>