force-app/main/default/objects/AcctSeedERP__Sales_Order__c/fields/tax_schedule__c.field-meta.xml
<CustomField>
    <fullName>tax_schedule__c</fullName>
    <formula>AcctSeedERP__Customer__r.Tax_Schedule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Schedule</label>
    <type>Text</type>
</CustomField>